add post and code link

--- a/NER_with_BERT.ipynb
+++ b/NER_with_BERT.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Also this notebook come with a post [NER with BERT in Action]**<br>\n",
+    "**Also this notebook come with a post [NER with BERT in Action](https://medium.com/@yingbiao/ner-with-bert-in-action-936ff275bc73)**<br>\n",
     "**Feel free to check it, hope that it could help you.**"
    ]
   },
@@ -1488,7 +1488,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:   0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     },
@@ -1506,7 +1505,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:  20%|██        | 1/5 [10:21<41:26, 621.73s/it]"
      ]
     },
@@ -1868,7 +1866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
