--- a/Textclassification_with_XLNET.ipynb
+++ b/Textclassification_with_XLNET.ipynb
@@ -43,8 +43,7 @@
     "from tqdm import tqdm,trange\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from pytorch_pretrained_bert import BertAdam"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -1108,6 +1107,8 @@
    "source": [
     "# True: fine tuning all the layers \n",
     "# False: only fine tuning the classifier layers\n",
+    "# Since XLNet in 'pytorch_transformer' did not contian classifier layers\n",
+    "# FULL_FINETUNING = True need to set True\n",
     "FULL_FINETUNING = True"
    ]
   },
