--- a/Textgeneration_with_GPT2.ipynb
+++ b/Textgeneration_with_GPT2.ipynb
@@ -579,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The context we writen before**"
+    "**The context we written before**"
    ]
   },
   {
@@ -669,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
