--- a/NER_with_BERT.ipynb
+++ b/NER_with_BERT.ipynb
@@ -27,14 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+      "/usr/local/lib/python3.6/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -46,8 +48,8 @@
     "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from pytorch_pretrained_bert import BertTokenizer, BertConfig\n",
-    "from pytorch_pretrained_bert import BertForTokenClassification, BertAdam"
+    "from pytorch_transformers import BertTokenizer, BertConfig\n",
+    "from pytorch_transformers import BertForTokenClassification, AdamW"
    ]
   },
   {
@@ -94,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use pytorch-pretrained-bert==0.4.0 to improve the accuracy\n",
+    "- Update to pytorch-transformer==1.0.0\n",
     "- When come across OOV,you will find that BERT word piece tokenize method can help a lot\n",
     "- Case model will be litter better than uncase model for English"
    ]
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
        "Index(['Sentence #', 'Word', 'POS', 'Tag'], dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +379,7 @@
        "19  Sentence: 1         troops  NNS      O"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +410,7 @@
        "       'UH', 'FW'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
        "       'I-eve', 'I-nat'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +459,7 @@
        "(47959, 35178, 42, 17)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +497,7 @@
        "Name: Tag, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +621,7 @@
        " '.']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +745,7 @@
        " '[SEP]'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +816,7 @@
        " '[SEP]': 19}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,17 +919,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Manual define vocabulary address, if you download the model in local\n",
-    "vocabulary = \"data/bert-base-cased/vocab.txt\""
+    "vocabulary = \"models/bert-base-cased/vocab.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1214,7 @@
        "(33571, 14388, 33571, 14388)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,17 +1324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# In this document, contain confg(txt) and weight(bin) files\n",
-    "model_file_address = 'data/bert-base-cased'"
+    "model_file_address = 'models/bert-base-cased'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1445,7 @@
     "    # Only fine tune classifier parameters\n",
     "    param_optimizer = list(model.classifier.named_parameters()) \n",
     "    optimizer_grouped_parameters = [{\"params\": [p for n, p in param_optimizer]}]\n",
-    "optimizer = Adam(optimizer_grouped_parameters, lr=3e-5)"
+    "optimizer = AdamW(optimizer_grouped_parameters, lr=3e-5)"
    ]
   },
   {
@@ -1469,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "scrolled": false
    },
@@ -1488,6 +1490,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "Epoch:   0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     },
@@ -1505,14 +1508,82 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  20%|██        | 1/5 [10:21<41:26, 621.73s/it]"
+      "\r",
+      "Epoch:  20%|██        | 1/5 [02:16<09:05, 136.43s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.135118007581784\n"
+      "Train loss: 0.13975251472428143\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch:  40%|████      | 2/5 [04:32<06:49, 136.37s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.06801466842149131\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch:  60%|██████    | 3/5 [06:49<04:33, 136.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.05254692953253951\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch:  80%|████████  | 4/5 [09:06<02:16, 136.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.04020711769562062\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Epoch: 100%|██████████| 5/5 [11:23<00:00, 136.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.02990101350940146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1530,8 +1601,9 @@
     "        b_input_ids, b_input_mask, b_labels = batch\n",
     "        \n",
     "        # forward pass\n",
-    "        loss = model(b_input_ids, token_type_ids=None,\n",
+    "        outputs = model(b_input_ids, token_type_ids=None,\n",
     "        attention_mask=b_input_mask, labels=b_labels)\n",
+    "        loss, scores = outputs[:2]\n",
     "        if n_gpu>1:\n",
     "            # When multi gpu, average it\n",
     "            loss = loss.mean()\n",
@@ -1572,16 +1644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_out_address = 'data/bert_out_model/en09'"
+    "bert_out_address = 'models/bert_out_model/en09'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,18 +1674,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If we save using the predefined names, we can load using `from_pretrained`\n",
     "output_model_file = os.path.join(bert_out_address, \"pytorch_model.bin\")\n",
-    "output_config_file = os.path.join(bert_out_address, \"bert_config.json\")"
+    "output_config_file = os.path.join(bert_out_address, \"config.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "metadata": {
     "scrolled": false
    },
@@ -1621,10 +1693,10 @@
     {
      "data": {
       "text/plain": [
-       "'data/bert_out_model/en09/vocab.txt'"
+       "('models/bert_out_model/en09/vocab.txt',)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1727,28 +1799,28 @@
      "output_type": "stream",
      "text": [
       "***** Running evaluation *****\n",
-      "  Num examples =9592\n",
+      "  Num examples =14388\n",
       "  Batch size = 32\n",
-      "f1 socre: 0.835420\n",
-      "Accuracy score: 0.971943\n",
+      "f1 socre: 0.833776\n",
+      "Accuracy score: 0.971076\n",
       "***** Eval results *****\n",
       "\n",
       "           precision    recall  f1-score   support\n",
       "\n",
-      "      org     0.7392    0.6954    0.7166      3897\n",
-      "      geo     0.8490    0.9043    0.8758      7339\n",
-      "      eve     0.3333    0.4412    0.3797        68\n",
-      "      per     0.7513    0.8004    0.7750      3366\n",
-      "      tim     0.8535    0.8742    0.8637      4031\n",
-      "      art     0.1746    0.2651    0.2105        83\n",
-      "      gpe     0.9590    0.9396    0.9492      3213\n",
-      "      nat     0.5517    0.4571    0.5000        35\n",
+      "      org     0.7315    0.6889    0.7096      5954\n",
+      "      geo     0.8434    0.9010    0.8712     11066\n",
+      "      gpe     0.9709    0.9327    0.9514      4830\n",
+      "      per     0.7529    0.7947    0.7732      5123\n",
+      "      tim     0.8728    0.8659    0.8693      6016\n",
+      "      eve     0.3854    0.4066    0.3957        91\n",
+      "      art     0.2258    0.1069    0.1451       131\n",
+      "      nat     0.3030    0.4082    0.3478        49\n",
       "\n",
-      "micro avg     0.8245    0.8466    0.8354     22032\n",
-      "macro avg     0.8269    0.8466    0.8361     22032\n",
+      "micro avg     0.8279    0.8397    0.8338     33260\n",
+      "macro avg     0.8288    0.8397    0.8336     33260\n",
       "\n",
-      "f1 socre: 0.835420\n",
-      "Accuracy score: 0.971943\n"
+      "f1 socre: 0.833776\n",
+      "Accuracy score: 0.971076\n"
      ]
     }
    ],
@@ -1769,8 +1841,10 @@
     "#         break\n",
     "    \n",
     "    with torch.no_grad():\n",
-    "        logits = model(input_ids, token_type_ids=None,\n",
+    "        outputs = model(input_ids, token_type_ids=None,\n",
     "        attention_mask=input_mask,)\n",
+    "        # For eval mode, the first result of outputs is logits\n",
+    "        logits = outputs[0] \n",
     "    \n",
     "    # Get NER predict result\n",
     "    logits = torch.argmax(F.log_softmax(logits,dim=2),dim=2)\n",
@@ -1852,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
