Fix: change from SEG_ID_A to SEG_ID_SEP
add SEG_ID_SEP to segment_ids when SEP_ID is added to tokens

--- a/Textclassification_with_XLNET.ipynb
+++ b/Textclassification_with_XLNET.ipynb
@@ -766,7 +766,7 @@
     "        \n",
     "    # Add <sep> token \n",
     "    tokens.append(SEP_ID)\n",
-    "    segment_ids.append(SEG_ID_A)\n",
+    "    segment_ids.append(SEG_ID_SEP)\n",
     "    \n",
     "    \n",
     "    # Add <cls> token\n",
