update to transformers2.2.0 support

--- a/Textgeneration_with_GPT2.ipynb
+++ b/Textgeneration_with_GPT2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,20 +47,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0107 06:35:24.310554 139899932444416 file_utils.py:32] TensorFlow version 2.0.0-rc1 available.\n",
+      "I0107 06:35:24.311983 139899932444416 file_utils.py:39] PyTorch version 1.1.0 available.\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import trange\n",
-    "from pytorch_transformers import (GPT2Tokenizer, GPT2LMHeadModel)"
+    "from transformers import (GPT2Tokenizer, GPT2LMHeadModel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch                1.1.0                 \r\n",
+      "transformers         2.2.0                 \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check library version\n",
+    "!pip list | grep -E 'transformers|torch'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook work with env:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- torch                1.1.0                 \n",
+    "- transformers         2.2.0      "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,8 +122,7 @@
    "metadata": {},
    "source": [
     "Tips:\n",
-    "- Update PyTorch to 1.1.0\n",
-    "- Update pytorch_transformers to 1.0.0"
+    "- Update PyTorch to 1.1.0"
    ]
   },
   {
@@ -121,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +198,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0107 06:35:39.164489 139899932444416 configuration_utils.py:149] loading configuration file models/gpt2-large/config.json\n",
+      "I0107 06:35:39.179713 139899932444416 configuration_utils.py:169] Model config {\n",
+      "  \"attn_pdrop\": 0.1,\n",
+      "  \"embd_pdrop\": 0.1,\n",
+      "  \"finetuning_task\": null,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"is_decoder\": false,\n",
+      "  \"layer_norm_epsilon\": 1e-05,\n",
+      "  \"n_ctx\": 1024,\n",
+      "  \"n_embd\": 1280,\n",
+      "  \"n_head\": 20,\n",
+      "  \"n_layer\": 36,\n",
+      "  \"n_positions\": 1024,\n",
+      "  \"num_labels\": 1,\n",
+      "  \"output_attentions\": false,\n",
+      "  \"output_hidden_states\": false,\n",
+      "  \"output_past\": true,\n",
+      "  \"pruned_heads\": {},\n",
+      "  \"resid_pdrop\": 0.1,\n",
+      "  \"summary_activation\": null,\n",
+      "  \"summary_first_dropout\": 0.1,\n",
+      "  \"summary_proj_to_labels\": true,\n",
+      "  \"summary_type\": \"cls_index\",\n",
+      "  \"summary_use_proj\": true,\n",
+      "  \"torchscript\": false,\n",
+      "  \"use_bfloat16\": false,\n",
+      "  \"vocab_size\": 50257\n",
+      "}\n",
+      "\n",
+      "I0107 06:35:39.184469 139899932444416 modeling_utils.py:384] loading weights file models/gpt2-large/pytorch_model.bin\n"
+     ]
+    }
+   ],
    "source": [
     "# Downlaod pytorch_model.bin : https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-large-pytorch_model.bin\n",
     "# Downlaod config.json : https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-large-config.json\n",
@@ -174,9 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0107 06:36:44.005394 139899932444416 tokenization_utils.py:307] Model name 'models/gpt2-large/' not found in model shortcut name list (gpt2-large, gpt2-xl, gpt2-medium, gpt2, distilgpt2). Assuming 'models/gpt2-large/' is a path or url to a directory containing tokenizer files.\n",
+      "I0107 06:36:44.010035 139899932444416 tokenization_utils.py:336] Didn't find file models/gpt2-large/special_tokens_map.json. We won't load it.\n",
+      "I0107 06:36:44.012279 139899932444416 tokenization_utils.py:336] Didn't find file models/gpt2-large/added_tokens.json. We won't load it.\n",
+      "I0107 06:36:44.014819 139899932444416 tokenization_utils.py:336] Didn't find file models/gpt2-large/tokenizer_config.json. We won't load it.\n",
+      "I0107 06:36:44.016863 139899932444416 tokenization_utils.py:372] loading file None\n",
+      "I0107 06:36:44.018291 139899932444416 tokenization_utils.py:372] loading file None\n",
+      "I0107 06:36:44.019231 139899932444416 tokenization_utils.py:372] loading file models/gpt2-large/vocab.json\n",
+      "I0107 06:36:44.020401 139899932444416 tokenization_utils.py:372] loading file models/gpt2-large/merges.txt\n",
+      "I0107 06:36:44.021644 139899932444416 tokenization_utils.py:372] loading file None\n"
+     ]
+    }
+   ],
    "source": [
     "# Download vocab file : https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-large-vocab.json\n",
     "# Download merges_file : https://s3.amazonaws.com/models.huggingface.co/bert/gpt2-large-merges.txt\n",
@@ -192,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,16 +495,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0107 06:37:11.859341 139899932444416 tokenization_utils.py:938] This tokenizer does not make use of special tokens. Input is returned with no modification.\n",
+      "W0107 06:37:11.860861 139899932444416 tokenization_utils.py:938] This tokenizer does not make use of special tokens. Input is returned with no modification.\n",
+      "W0107 06:37:11.863465 139899932444416 tokenization_utils.py:925] This tokenizer does not make use of special tokens.\n"
+     ]
+    }
+   ],
    "source": [
     "context_tokens = tokenizer.encode(raw_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,14 +605,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:02<00:00, 10.16it/s]\n"
+      "100%|██████████| 30/30 [00:03<00:00,  9.83it/s]\n"
      ]
     }
    ],
@@ -525,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Its stock began trading on the New York Stock Exchange on June 1, 1978.\\n\\nIt was the first computer company to be listed on the NAS'"
+       "' The company was founded to create \"a portable computer with an LCD display that could be operated by the hand, using a simple two-button mouse.\"'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +691,7 @@
        "'Apple was founded by Steve Jobs, Steve Wozniak, and Ronald Wayne in April 1976.'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,16 +725,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Apple was founded by Steve Jobs, Steve Wozniak, and Ronald Wayne in April 1976.  Its stock began trading on the New York Stock Exchange on June 1, 1978.\\n\\nIt was the first computer company to be listed on the NAS'"
+       "'Apple was founded by Steve Jobs, Steve Wozniak, and Ronald Wayne in April 1976.  The company was founded to create \"a portable computer with an LCD display that could be operated by the hand, using a simple two-button mouse.\"'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
