add model files download address

--- a/NER_with_BERT.ipynb
+++ b/NER_with_BERT.ipynb
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make tranning data"
+    "## Make training data"
    ]
   },
   {
@@ -949,12 +949,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can download the tokenizer file into local folder first :\n",
+    "- [vocab.txt](https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-vocab.txt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Manual define vocabulary address, if you download the model in local\n",
+    "# Manual define vocabulary address, if you download the tokenzier file in local\n",
+    "# vocab.txt, download from: https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-vocab.txt\n",
     "vocabulary = \"models/bert-base-cased/vocab.txt\""
    ]
   },
@@ -964,7 +973,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Len of the sentence must be the same as the training model\n",
+    "# Len of the sentence must be not bigger than the training model\n",
     "# See model's 'max_position_embeddings' = 512\n",
     "max_len  = 45"
    ]
@@ -978,6 +987,13 @@
     "# load tokenizer, with manual file address or pretrained address\n",
     "tokenizer=BertTokenizer(vocab_file=vocabulary,do_lower_case=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1350,6 +1366,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- You can download the model require files into local folder first\n",
+    "- pytorch_model.bin: [pytorch_model.bin](https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-pytorch_model.bin)\n",
+    "- config.json: [config.json](https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-config.json)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Load BERT model**"
    ]
   },
@@ -1359,7 +1384,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In this document, contain confg(txt) and weight(bin) files\n",
+    "# In this folder, contain model confg(json) and model weight(bin) files\n",
+    "# pytorch_model.bin, download from: https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-pytorch_model.bin\n",
+    "# config.json, downlaod from: https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-cased-config.json\n",
     "model_file_address = 'models/bert-base-cased'"
    ]
   },
