add NER inferene support

--- a/NER_with_BERT.ipynb
+++ b/NER_with_BERT.ipynb
@@ -35,8 +35,8 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "I0507 15:08:53.144815 140032303408896 file_utils.py:41] PyTorch version 1.1.0 available.\n",
-      "I0507 15:08:53.147181 140032303408896 file_utils.py:57] TensorFlow version 2.0.0 available.\n"
+      "I0507 16:24:41.160771 139888124225280 file_utils.py:41] PyTorch version 1.1.0 available.\n",
+      "I0507 16:24:41.162539 139888124225280 file_utils.py:57] TensorFlow version 2.0.0 available.\n"
      ]
     }
    ],
@@ -2092,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2145,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,15 +2155,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0507 15:26:26.214308 140032303408896 configuration_utils.py:254] loading configuration file models/bert_out_model/en09/config.json\n",
-      "I0507 15:26:26.216559 140032303408896 configuration_utils.py:292] Model config BertConfig {\n",
+      "I0507 16:25:01.311969 139888124225280 configuration_utils.py:254] loading configuration file models/bert_out_model/en09/config.json\n",
+      "I0507 16:25:01.313669 139888124225280 configuration_utils.py:292] Model config BertConfig {\n",
       "  \"architectures\": null,\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"bos_token_id\": null,\n",
@@ -2245,7 +2245,7 @@
       "  \"vocab_size\": 28996\n",
       "}\n",
       "\n",
-      "I0507 15:26:26.221178 140032303408896 modeling_utils.py:459] loading weights file models/bert_out_model/en09/pytorch_model.bin\n"
+      "I0507 16:25:01.316571 139888124225280 modeling_utils.py:459] loading weights file models/bert_out_model/en09/pytorch_model.bin\n"
      ]
     }
    ],
@@ -2269,21 +2269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0507 15:29:35.710789 140032303408896 tokenization_utils.py:417] Model name 'models/bert_out_model/en09' not found in model shortcut name list (bert-base-multilingual-uncased, bert-large-cased-whole-word-masking-finetuned-squad, bert-base-cased-finetuned-mrpc, bert-base-german-dbmdz-cased, bert-large-cased-whole-word-masking, bert-large-uncased-whole-word-masking, bert-base-cased, bert-base-german-cased, bert-base-chinese, bert-base-finnish-cased-v1, bert-base-uncased, bert-large-uncased-whole-word-masking-finetuned-squad, bert-base-dutch-cased, bert-large-uncased, bert-base-german-dbmdz-uncased, bert-base-multilingual-cased, bert-large-cased, bert-base-finnish-uncased-v1). Assuming 'models/bert_out_model/en09' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-      "I0507 15:29:35.717831 140032303408896 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/special_tokens_map.json. We won't load it.\n",
-      "I0507 15:29:35.720060 140032303408896 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/added_tokens.json. We won't load it.\n",
-      "I0507 15:29:35.722814 140032303408896 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/tokenizer_config.json. We won't load it.\n",
-      "I0507 15:29:35.725018 140032303408896 tokenization_utils.py:499] loading file models/bert_out_model/en09/vocab.txt\n",
-      "I0507 15:29:35.731333 140032303408896 tokenization_utils.py:499] loading file None\n",
-      "I0507 15:29:35.732535 140032303408896 tokenization_utils.py:499] loading file None\n",
-      "I0507 15:29:35.733820 140032303408896 tokenization_utils.py:499] loading file None\n"
+      "I0507 16:25:05.673797 139888124225280 tokenization_utils.py:417] Model name 'models/bert_out_model/en09' not found in model shortcut name list (bert-base-chinese, bert-base-finnish-cased-v1, bert-base-german-dbmdz-uncased, bert-large-cased-whole-word-masking-finetuned-squad, bert-large-cased, bert-base-uncased, bert-large-uncased-whole-word-masking, bert-base-multilingual-cased, bert-base-dutch-cased, bert-base-finnish-uncased-v1, bert-base-multilingual-uncased, bert-large-uncased-whole-word-masking-finetuned-squad, bert-base-german-dbmdz-cased, bert-base-cased, bert-large-uncased, bert-base-cased-finetuned-mrpc, bert-large-cased-whole-word-masking, bert-base-german-cased). Assuming 'models/bert_out_model/en09' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+      "I0507 16:25:05.675888 139888124225280 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/added_tokens.json. We won't load it.\n",
+      "I0507 16:25:05.677664 139888124225280 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/tokenizer_config.json. We won't load it.\n",
+      "I0507 16:25:05.679970 139888124225280 tokenization_utils.py:446] Didn't find file models/bert_out_model/en09/special_tokens_map.json. We won't load it.\n",
+      "I0507 16:25:05.681512 139888124225280 tokenization_utils.py:499] loading file None\n",
+      "I0507 16:25:05.682542 139888124225280 tokenization_utils.py:499] loading file None\n",
+      "I0507 16:25:05.691070 139888124225280 tokenization_utils.py:499] loading file models/bert_out_model/en09/vocab.txt\n",
+      "I0507 16:25:05.692115 139888124225280 tokenization_utils.py:499] loading file None\n"
      ]
     }
    ],
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,11 +2319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_query = \"I live in USA, This is my IBM laptop.\""
+    "test_query = \"I live in USA, this is my IBM laptop.\""
    ]
   },
   {
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2388,16 +2388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['I', 'live', 'in', 'USA', ',', 'This', 'is', 'my', 'IBM', 'laptop', '.']"
+       "['I', 'live', 'in', 'USA', ',', 'this', 'is', 'my', 'IBM', 'laptop', '.']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2408,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2451,7 @@
        " 'in',\n",
        " 'USA',\n",
        " ',',\n",
-       " 'This',\n",
+       " 'this',\n",
        " 'is',\n",
        " 'my',\n",
        " 'IBM',\n",
@@ -2460,7 +2460,7 @@
        " '[SEP]']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2494,14 +2494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  101   146  1686  1107  3066   117  1188  1110  1139  9768 12574   119\n",
+      "[  101   146  1686  1107  3066   117  1142  1110  1139  9768 12574   119\n",
       "   102     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0     0     0     0     0     0     0]\n"
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2580,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2629,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2663,7 +2663,7 @@
        "(1, 45, 20)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2688,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2706,21 +2706,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.0200165e-07, 5.4830019e-07, 3.8925904e-07, 3.9680629e-07,\n",
-       "       5.6399750e-07, 8.3164292e-07, 4.2071841e-07, 6.6626359e-07,\n",
-       "       1.5075259e-06, 4.4725402e-07, 4.2508015e-07, 1.5064049e-06,\n",
-       "       1.2914809e-06, 3.4273421e-07, 3.1454285e-06, 4.4005091e-07,\n",
-       "       1.5163965e-06, 6.1533979e-07, 8.3204448e-01, 1.3378401e-06],\n",
+       "array([5.9468857e-07, 6.0080066e-07, 4.0490704e-07, 4.3075502e-07,\n",
+       "       5.3710983e-07, 8.1970501e-07, 4.4107060e-07, 6.8387163e-07,\n",
+       "       1.4901701e-06, 4.3826424e-07, 4.2638061e-07, 1.4972500e-06,\n",
+       "       1.3224795e-06, 3.3777670e-07, 2.8167085e-06, 4.8201440e-07,\n",
+       "       1.5525582e-06, 6.1996315e-07, 8.1188858e-01, 1.1874760e-06],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2731,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2740,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
        "(45, 20)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2802,7 @@
        "       17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
       "Token:,\n",
       "Predict_Tag:O\n",
       "\n",
-      "Token:This\n",
+      "Token:this\n",
       "Predict_Tag:O\n",
       "\n",
       "Token:is\n",
