--- a/Textclassification_with_XLNET.ipynb
+++ b/Textclassification_with_XLNET.ipynb
@@ -72,11 +72,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Keras                2.3.1                 \r\n",
-      "Keras-Applications   1.0.8                 \r\n",
-      "Keras-Preprocessing  1.0.9                 \r\n",
-      "torch                1.1.0                 \r\n",
-      "transformers         2.2.0                 \r\n"
+      "Keras                2.3.1                 \n",
+      "Keras-Applications   1.0.8                 \n",
+      "Keras-Preprocessing  1.0.9                 \n",
+      "torch                1.1.0                 \n",
+      "transformers         2.2.0                 \n"
      ]
     }
    ],
@@ -1042,6 +1042,7 @@
    "outputs": [],
    "source": [
     "# In this document, contain confg(txt) and weight(bin) files\n",
+    "# The folder must contain: pytorch_model.bin, config.json\n",
     "model_file_address = 'models/xlnet-base-cased'"
    ]
   },
@@ -1101,6 +1102,8 @@
     "# Recommand download the model before using\n",
     "# Download model from \"https://s3.amazonaws.com/models.huggingface.co/bert/xlnet-base-cased-pytorch_model.bin\"\n",
     "# Download model from \"https://s3.amazonaws.com/models.huggingface.co/bert/xlnet-base-cased-config.json\" \n",
+    "# ATTENTION!, rename \"xlnet-base-cased-pytorch_model.bin\" into \"pytorch_model.bin\"\n",
+    "# rename \"xlnet-base-cased-config.json\" inot \"config.json\"\n",
     "model = XLNetForSequenceClassification.from_pretrained(model_file_address,num_labels=len(tag2idx))"
    ]
   },
@@ -1254,7 +1257,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:   0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     },
@@ -1272,7 +1274,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:  20%|██        | 1/5 [00:46<03:05, 46.50s/it]"
      ]
     },
@@ -1287,7 +1288,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:  40%|████      | 2/5 [01:33<02:19, 46.51s/it]"
      ]
     },
@@ -1302,7 +1302,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:  60%|██████    | 3/5 [02:19<01:33, 46.51s/it]"
      ]
     },
@@ -1317,7 +1316,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "Epoch:  80%|████████  | 4/5 [03:05<00:46, 46.48s/it]"
      ]
     },
@@ -1726,7 +1724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
